[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/animations/enemy_melee_craby.tres" type="SpriteFrames" id=1]
[ext_resource path="res://niveles/nivel_6_enemigos_melee/enemy_craby.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/fuente_predeterminada.tres" type="DynamicFontData" id=3]
[ext_resource path="res://niveles/nivel_6_enemigos_melee/characte_dialogs.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 6.08276

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[node name="enemy_craby" type="RigidBody2D" groups=["entity"]]
mode = 2
gravity_scale = 5.0
contact_monitor = true
script = ExtResource( 2 )
life = 3
force_factor = 27
speed = 75
fov_lenght = 100
min_t_to_wait = 2
max_t_to_wait = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "attack"
frame = 3
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 4 )

[node name="RayCast_available_ground_back" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
exclude_parent = false
cast_to = Vector2( 30, 0 )

[node name="RayCast_available_ground_front" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
cast_to = Vector2( -30, 0 )

[node name="RayCast_fov" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 5

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -36.0
margin_right = 104.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 5 )
text = "current_state"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="." groups=["entity"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="character_dialog" parent="." instance=ExtResource( 4 )]
position = Vector2( 8, -9 )
scale = Vector2( 1, 1 )

[connection signal="body_entered" from="." to="." method="_on_enemy_craby_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
